# ansible-collection-purelymail

./: .editorconfig  .env.example  .gitignore  .mise.toml  CONTRIBUTING.md  INTEGRATION_TESTS_PLAN.md  TODO  pyproject.toml  spec.jsonc
.ansible/collections/ansible_collections/: bofzilla
.config/: .ansible-lint.yml  requirements.txt  tasks.mise.toml
.github/: renovate.json
.github/workflows/: dependency-review.yml  hygiene.yml  lint.yml  tests.yml  update-swagger-spec.yml
ansible_collections/bofzilla/purelymail/: README.md  galaxy.yml
ansible_collections/bofzilla/purelymail/plugins/lookup/: purelymail_ownership_code.py
ansible_collections/bofzilla/purelymail/plugins/module_utils/: pydantic.py
ansible_collections/bofzilla/purelymail/plugins/module_utils/clients/: base_client.py  billing_client.py  domain_client.py  routing_client.py  user_client.py
ansible_collections/bofzilla/purelymail/plugins/module_utils/clients/types/: api_types.py  module_inputs.py  requests.py  response_wrapper.py  responses.py
ansible_collections/bofzilla/purelymail/plugins/modules/: create_route.py  credit_info.py  delete_route.py  domains.py  list_routes.py  routing_rules.py  users.py
ansible_collections/bofzilla/purelymail/plugins/modules/crud/: create_route.py  credit_info.py  delete_route.py  list_routes.py
ansible_collections/bofzilla/purelymail/plugins/modules/crud/billing/: check_credit_info.py
ansible_collections/bofzilla/purelymail/plugins/modules/crud/domain/: add_domain.py  delete_domain.py  get_ownership_code.py  list_domains.py  update_domain_settings.py
ansible_collections/bofzilla/purelymail/plugins/modules/crud/routing/: create_routing_rule.py  delete_routing_rule.py  list_routing_rules.py
ansible_collections/bofzilla/purelymail/plugins/modules/crud/user/: create_app_password.py  create_user.py  (+8 more)
ansible_collections/bofzilla/purelymail/tests/integration/: integration_config.yml.tpl
ansible_collections/bofzilla/purelymail/tests/unit/plugins/: mock_utils.py
bofzilla/purelymail/: README.md  galaxy.yml
bofzilla/purelymail/meta/: runtime.yml
(+114 files in other folders)
