[project]
name = "ansible-collection-purelymail"
version = "0.0.1"
dependencies = [
	"ansible==13.3.0",
	"ansible-lint==25.12.2",
	"coverage==7.13.3",
	"pydantic==2.12.5",
	"pytest==9.0.2",
	"pytest-ansible==25.12.0",
	"requests==2.32.5",
	"ruff==0.15.0",
	"ty==0.0.15",
]

[tool.ruff]
indent-width = 4
line-length = 180

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = [
	# pycodestyle
	"E",
	# Pyflakes
	"F",
	# pyupgrade
	"UP",
	# flake8-bugbear
	"B",
	# flake8-simplify
	"SIM",
	# isort
	"I",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 180
