[project]
name = "ansible-collection-purelymail"
version = "0.0.1"
dependencies = [
	"ansible==13.7.0",
	"ansible-lint==26.4.0",
	"coverage==7.14.1",
	"pydantic==2.13.4",
	"pytest==9.1.0",
	"pytest-xdist==3.8.0",
	"requests==2.34.2",
	"ruff==0.15.17",
	"ty==0.0.49",
]

[tool.ruff]
indent-width = 4
line-length = 180

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = [
	# pycodestyle
	"E",
	# Pyflakes
	"F",
	# pyupgrade
	"UP",
	# flake8-bugbear
	"B",
	# flake8-simplify
	"SIM",
	# isort
	"I",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 180
